--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
