--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.4"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
